--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -1,3 +1,7 @@
 {
-font-family: 'Avenir', sans-serif !important;
-}
+    font-family: font-family: 'Avenir', sans-serif !important;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-size: 16px;
+    color: #44446;
+ }
