--- a/docs/.vuepress/styles/palette.styl
+++ b/docs/.vuepress/styles/palette.styl
@@ -1,6 +1,6 @@
 // showing default values
 $accentColor = #009cde
-$textColor = #2c3e50
+$textColor = #444446
 $borderColor = #eaecef
 $codeBgColor = #282c34
 $contentWidth = 3000px
