--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -1,4 +1,7 @@
 body {
     font-family: 'Avenir', sans-serif !important;
+    font-size: 14px !important;
+    line-height: 1.5 !important;
     color: #44446 !important;
+    background-color: #fff !important;
  }
