--- a/docs/.vuepress/style.styl
+++ b/docs/.vuepress/style.styl
@@ -1,2 +1,5 @@
-h1 { color: blue; }
-h2 { color: red; }
+{font-family: 'Avenir', sans-serif !important;}
+{font-size: 14px !important;}
+{line-height: 1.5 !important;}
+{color: #44446 !important;}
+{background-color: #fff !important;}
