--- a/docs/.vuepress/style.styl
+++ b/docs/.vuepress/style.styl
@@ -1,5 +1,7 @@
-{font-family: 'Avenir', sans-serif !important;}
-{font-size: 14px !important;}
-{line-height: 1.5 !important;}
-{color: #44446 !important;}
-{background-color: #fff !important;}
+body {
+	font-family: Avenir, sans-serif;
+	font-size: 14px
+	line-height: 1.5
+	color: #444446
+	background-color: #ffffff
+}
